  This is more robust and in particular avoids assembly failures on Win64.
  (Mark Shinwell, review by Xavier Leroy, testing by David Allsopp and
   Olivier Andrieu)

- GPR#956 Keep possibly-effectful expressions when optimizing multiplication
  by zero.
  (Jeremy Yallop)

- PR#7427, GPR#959: Don't delete let bodies in Cmmgen (Mark Shinwell)

- PR#7346, GPR#966: Fix evaluation order problem whereby expressions could
  be incorrectly re-ordered when compiling with Flambda.  This also fixes one
  example of evaluation order in the native code compiler not matching the
  bytecode compiler (even when not using Flambda)
  (Mark Shinwell, Leo White, code review by Pierre Chambart)

- GPR#967, PR#6136: Fix Closure so that overapplication evaluation order
  matches the bytecode compiler and Flambda.
  (Mark Shinwell, report by Jeremy Yallop, review by Frédéric Bour)

- GPR#983: Avoid removing effectful expressions in Closure, and
  eliminate more non-effectful ones
  (Alain Frisch, review by Mark Shinwell and Gabriel Scherer)

- GPR#987: alloc_sockaddr: don't assume a null terminator. It is not inserted
  on macOS by system calls that fill in a struct sockaddr (e.g. getsockname).
  (Anton Bachin)

- GPR#1019: Fix fatal error in Flambda mode "[functions] does not map set of
  closures ID" (Pierre Chambart, code review by Mark Shinwell and Leo White)

### Toplevel and debugger:

- PR#7060, GPR#1035: Print exceptions in installed custom printers
  (Tadeu Zagallo, review by David Allsopp)

Next minor version (4.04.1):
----------------------------

### Standard library:

- PR#7403, GPR#894: fix a bug in Set.map as introduced in 4.04.0
  (Gabriel Scherer, report by Thomas Leonard)

### Bug fixes

- PR#7405, GPR#903: s390x: Fix address of caml_raise_exn in native dynlink modules
  (Richard Jones, review by Xavier Leroy)

- MPR#7417, GPR#930: ensure 16 byte stack alignment inside caml_allocN on x86-64
  for ocaml build with WITH_FRAME_POINTERS defined
  (Christoph Cullmann)
